<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SignActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/setplogo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_registered_number"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginVertical="25dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:layout_marginStart="25dp"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:text="@string/country_code"
                android:textSize="14sp"/>
            <com.hbb20.CountryCodePicker
                android:id="@+id/verifyCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                android:layout_gravity="center"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mobile Number"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                android:hint="@string/enter_mobile_number"
                android:layout_marginBottom="5dp"

                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                android:textColor="@color/black"
                android:background="@null"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginBottom="25dp"
        android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_number"
        android:background="@drawable/save_back"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:padding="12dp"
        android:gravity="center"/>
    </LinearLayout>

</LinearLayout>