<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.UserDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/segoeuibold"
            android:text="@string/enter_details"
            android:textColor="@color/textcolor"
            android:textSize="18sp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/segoe_ui"
                            android:text="First Name"
                            android:textColor="@color/textcolor"
                            android:textSize="14sp" />


                        <androidx.appcompat.widget.AppCompatEditText
                            android:singleLine="true"
                            android:id="@+id/firstname"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/segoe_ui"
                            android:hint="@string/firstname"
                            android:textColor="@color/textcolor"
                            android:textColorHint="#878484"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#C9000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/segoe_ui"
                            android:text="@string/last_name"
                            android:textColor="@color/textcolor"
                            android:textSize="14sp" />


                        <EditText
                            android:id="@+id/lastname"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:singleLine="true"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/segoe_ui"
                            android:hint="@string/lastname"
                            android:textColor="@color/textcolor"
                            android:textColorHint="#878484"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#C9000000" />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoe_ui"
                        android:text="Email"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />


                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:singleLine="true"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/segoe_ui"
                        android:hint="Email Id"
                        android:textColor="@color/textcolor"
                        android:textColorHint="#878484"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#C9000000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoe_ui"
                        android:text="Username"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/segoe_ui"
                        android:singleLine="true"
                        android:hint="Email Id"
                        android:textColor="@color/textcolor"
                        android:textColorHint="#878484"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#C9000000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoe_ui"
                        android:text="Date of Birth"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/segoe_ui"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:textColor="@color/textcolor"
                        android:textSize="14dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#C9000000" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="13dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1.5"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/segoe_ui"
                            android:text="Country Code"
                            android:textColor="#CB000000"
                            android:textSize="14sp" />

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/countryPicker2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:ccp_autoDetectCountry="true" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginRight="10dp"
                            android:background="#CD000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/segoe_ui"
                            android:text="Country Code"
                            android:textColor="#CB000000"
                            android:textSize="14sp" />


                        <EditText
                            android:id="@+id/number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:digits="0123456789"
                            android:fontFamily="@font/segoeuibold"
                            android:hint="6655588777"
                            android:inputType="number"
                            android:maxLength="10"
                            android:singleLine="true"
                            android:padding="11dp"
                            android:textColor="@color/textcolor"
                            android:textColorHint="#3B000000"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginRight="10dp"
                            android:background="#CD000000" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/segoe_ui"
                            android:text="Weight"
                            android:textColor="@color/textcolor"
                            android:textSize="14sp" />


                        <EditText
                            android:id="@+id/weight"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/segoe_ui"
                            android:hint="Weight"
                            android:inputType="number"
                            android:textColor="@color/textcolor"
                            android:textColorHint="#878484"
                            android:textSize="14dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#C9000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/segoe_ui"
                            android:text="Height"
                            android:textColor="@color/textcolor"
                            android:textSize="14sp" />


                        <EditText
                            android:id="@+id/height"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/segoe_ui"
                            android:hint="CM"
                            android:inputType="number"
                            android:textColor="@color/textcolor"
                            android:textColorHint="#878484"
                            android:textSize="14dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#C9000000" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="bottom"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/save_back"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="SAVE"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</FrameLayout>